# QuickTestDockerfile

./: Jenkinsfile  README.md  otherScript_JenkinsFile  someScript.sh  someScript_JenkinsFile
bashScript/: Jenkinsfile  main.sh
cppBinary/: CMakeLists.txt  Dockerfile  Jenkinsfile  main.cpp  main.h.in
cppBinary/src/: CMakeLists.txt  hello.cpp  hello.h  main.cpp  main.h.in
cppBinary/test/: CMakeLists.txt  buildHello_test.cpp
javaWorker/: startWorker_Jenkinsfile  stopWorker_Jenkinsfile
nodeScript/: Jenkinsfile
otherScript/: otherScript.js  otherScript_JenkinsFile
someBinary/: CMakeLists.txt  Dockerfile  someBinary_Jenkinsfile
someScript/: someScript.sh  someScript_JenkinsFile
